--- a/src/components/component.css
+++ b/src/components/component.css
@@ -1,15 +1,13 @@
-.logo_img{
+/*.logo_img{
    width: 120px;
    margin: 50px 100px;
-
 }
-
+*/
 .link {
   display: block;
   font-size: 14px;
   text-align: center;
 }
-
 
 .card__container {
   margin-top: 10px;
@@ -17,7 +15,7 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .card {
@@ -37,35 +35,10 @@
   color: blue;
 }
 
-
-.card__label {
-  display: block;
-  font-size: 14px;
-  margin-left: 10px;
-
-}
-
-
-.add__input {
-  width: 100%;
-  height: 35px;
-  border: 1px solid #ccc;
-  padding-left: 10px;
-  font-size: 14px;
-  display: block;
-  margin: 10px auto;
-  border-radius: 4px;
-  
-}
-
-
 .add__btn {
-  height: 34px;
   min-width: 70px;
   width:100px;
-  display: block;
-  margin: 10px auto;
-  border-radius: 5px;
+  margin: auto;
   text-align: center;
   color: white;
 }
@@ -73,7 +46,7 @@
 td {
 width: 170px;
 }
- .col-sm-5 {
-  padding-top: 4%;
 
+.col-sm-5 {
+  padding-top: 4%;
  }
