--- a/src/components/component.css
+++ b/src/components/component.css
@@ -48,5 +48,17 @@ width: 170px;
 }
 
 .col-sm-5 {
+
   padding-top: 4%;
  }
+
+  padding-left: 4%;
+}
+.pading {
+padding-right:55px;
+
+}
+.pading1 {
+padding-right:36px;
+}
+
