--- a/src/components/component.css
+++ b/src/components/component.css
@@ -1,52 +1,72 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+
 /*.logo_img{
    width: 120px;
    margin: 50px 100px;
 }
 */
 .link {
-  display: block;
-  font-size: 14px;
-  text-align: center;
+	display: block;
+	font-size: 14px;
+	text-align: center;
 }
 
 .card__container {
-  margin-top: 10px;
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  flex-direction: column;
+	margin-top: 10px;
+	display: -webkit-box;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	flex-direction: column;
 }
 
 .card {
-  margin: 20% auto;
-  box-shadow: 0 1px 3px rgba(0, 0, 0.1, 0.1);
-  border-radius: 8px;
-  position: relative;
-  border: 1px solid #e6e6e6;
-  padding: 4%;
+	margin: 20% auto;
+	box-shadow: 0 1px 3px rgba(0, 0, 0.1, 0.1);
+	border-radius: 8px;
+	position: relative;
+	border: 1px solid #e6e6e6;
+	padding: 4%;
 }
 
 .card__title {
-  display: block;
-  font-size: 30px;
-  text-align: center;
-  font-weight: 500px;
-  color: blue;
+	display: block;
+	font-size: 30px;
+	text-align: center;
+	font-weight: 500px;
+	color: blue;
 }
 
+.input-container {
+	width: 500px;
+}
+.input-field {
+	width: 400px;
+}
+
+.head {
+	font-family: "Montserrat", sans-serif;
+}
+.icon {
+	padding: 10px;
+	background: dodgerblue;
+	color: white;
+	min-width: 40px;
+	min-height: 38px;
+	text-align: center;
+}
 .add__btn {
-  min-width: 70px;
-  width:100px;
-  margin: auto;
-  text-align: center;
-  color: white;
+	min-width: 70px;
+	width: 100px;
+	margin: auto;
+	text-align: center;
+	color: white;
 }
 
 td {
-width: 170px;
+	width: 170px;
 }
 
 .col-sm-5 {
-  padding-top: 4%;
- }
+	padding-top: 4%;
+}
